--- a/html/main.html
+++ b/html/main.html
@@ -17,15 +17,29 @@
 </head>
 <body>
     <!-- Alert Window -->
-   <div class="container-fluid">
-       <div class="col-xl alert alert-success">
+   
+       <div class="col-12 alert alert-success">
            <strong>This is Fun!!</strong>
            <br>
            <p>This is the alert Box</p>
        </div>
-   </div>
+   
 
-   <!-- Buttons Play -->\
+   
+   <div class="row">
+       <div class="col-2 ">
+        <div class="btn btn-primary col-12">BRO</div>
+       </div>
+       <div class="col-2 offset-3 ">
+        <div class="btn btn-primary col-12">Buddy</div>
+       </div>
+       <div class="col-2 offset-3">
+        <div class="btn btn-primary col-12">BC</div>
+       </div>
+   </div>
+   
+</div>
+   <!-- Buttons Play -->
    <div class="btn"></div>
 </body>
 </html>
