--- a/html/main.html
+++ b/html/main.html
@@ -6,7 +6,7 @@
     <!-- CSS only -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
  integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-
+<link rel="stylesheet" href="./style.css">
  <!-- BootStrap JQuery -->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <!-- BootStrap Popper -->
@@ -37,7 +37,42 @@
         <div class="btn btn-primary col-12">BC</div>
        </div>
    </div>
-   
+   <br>
+   <div class="container">
+       <div class="col">
+           <div class="row">
+               <table class="table table-sm table-dark" id="table">
+                   <thead>
+                       <th scope="col">Names</th>
+                       <th scope="col">Skills</th>
+                       <th scope="col">Availability</th>
+                       <th scope="col">Works</th>
+                   </thead>
+                   <tbody>
+                    <tr>
+                      <th scope="row">BOB</th>
+                      <td>NODE.JS</td>
+                      <td>YES</td>
+                      <td>Web Dev</td>
+                    </tr>
+                    <tr>
+                      <th scope="row">Tony</th>
+                      <td>Security</td>
+                      <td>No</td>
+                      <td>CyberSpace</td>
+                    </tr>
+                    <tr>
+                      <th scope="row">Terry</th>
+                      <td>Cloud</td>
+                      <td>Yes</td>
+                      <td>Azure</td>
+                    </tr>
+                  </tbody>
+               </table>
+           </div>
+       </div>
+   </div>
+
 </div>
    <!-- Buttons Play -->
    <div class="btn"></div>
