--- a/html/main.html
+++ b/html/main.html
@@ -46,7 +46,7 @@
                        <th scope="col">Names</th>
                        <th scope="col">Skills</th>
                        <th scope="col">Availability</th>
-                       <th scope="col">Works</th>
+                       <th scope="col">Department</th>
                    </thead>
                    <tbody>
                     <tr>
