--- a/html/main.html
+++ b/html/main.html
@@ -38,10 +38,11 @@
        </div>
    </div>
    <br>
+
    <div class="container">
        <div class="col">
            <div class="row">
-               <table class="table table-sm table-dark" id="table">
+               <table class="table table-sm rounded-top">
                    <thead>
                        <th scope="col">Names</th>
                        <th scope="col">Skills</th>
@@ -50,19 +51,19 @@
                    </thead>
                    <tbody>
                     <tr>
-                      <th scope="row">BOB</th>
+                      <td>BOB</td>
                       <td>NODE.JS</td>
                       <td>YES</td>
                       <td>Web Dev</td>
                     </tr>
                     <tr>
-                      <th scope="row">Tony</th>
+                      <td>Tony</td>
                       <td>Security</td>
                       <td>No</td>
                       <td>CyberSpace</td>
                     </tr>
                     <tr>
-                      <th scope="row">Terry</th>
+                      <td>Terry</td>
                       <td>Cloud</td>
                       <td>Yes</td>
                       <td>Azure</td>
@@ -70,8 +71,24 @@
                   </tbody>
                </table>
            </div>
+
+           <div class="row">
+               <div class="overflow-auto">
+                   <table class="table table-sm table-dark">
+                    <td></td>
+                   </table>
+               </div>
+           </div>
        </div>
    </div>
+
+<br>
+<br>
+<br>
+ 
+<div class="container">
+
+</div>
 
 </div>
    <!-- Buttons Play -->
